fix: Disable HTTP Basic Authentication and Form Login because JWT-based Authentication is enabled, and disable sessions because JWT-based authentication is stateless