@@ -1,12 +1,12 @@
 package com.mdggu.config;
 
-import com.mdggu.controller.AuthController;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -17,24 +17,23 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-import org.springframework.security.web.util.matcher.RequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
-    private static final Logger log = LoggerFactory.getLogger(AuthController.class);
+    private static final Logger log = LoggerFactory.getLogger(SecurityConfig.class);
 
     @Value("${frontend.url}")
     private String frontendUrl;
 
     @Autowired
-    private JwtTokenProvider jwtTokenProvider;
+    private TokenProvider tokenProvider;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -51,37 +50,35 @@ public class SecurityConfig {
         http
                 .cors().configurationSource(corsConfigurationSource())
                 .and()
-                .csrf().disable()
+                .csrf().disable() // CSRF 비활성화 (CSRF Token을 사용하므로 Spring Security의 CSRF 보호 기능 비활성화)
+                .httpBasic().disable() // HTTP Basic 인증 비활성화
+                .formLogin().disable() // 폼 로그인 비활성화
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS) // 세션 사용 안 함
+                .and()
                 .authorizeRequests()
-                .requestMatchers("/api/v1/auth/**").permitAll()
-                .requestMatchers(requestMatcher("/api/v1/documents/.*")).permitAll()
-                .requestMatchers(requestMatcher("/health")).hasRole("ADMIN")
-                .requestMatchers(requestMatcher("/status")).hasRole("ADMIN")
-                .anyRequest().authenticated()
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // CORS preflight 요청 허용
+                .requestMatchers("/api/v1/auth/**").permitAll() // 인증 관련 API는 모두 허용
+                .requestMatchers("/api/v1/documents/**").permitAll() // 문서 관련 API는 모두 허용 (임시)
+                .requestMatchers("/health").hasRole("ADMIN")
+                .requestMatchers("/status").hasRole("ADMIN")
+                .anyRequest().authenticated() // 그 외 모든 요청은 인증 필요
                 .and()
-                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                .and()
-                .addFilterBefore(new JwtAuthenticationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class);
+                .addFilterBefore(new JwtAuthenticationFilter(tokenProvider), UsernamePasswordAuthenticationFilter.class); // JWT 인증 필터 추가
+
         log.info("SecurityFilterChain configured");
         return http.build();
-    }
-
-    private RequestMatcher requestMatcher(String pattern) {
-        // 새로운 안전한 RequestMatcher 구현
-        return new CustomRequestMatcher(pattern);
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOrigins(Arrays.asList(frontendUrl));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-
+        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // 허용된 origin 설정
+//        configuration.setAllowedOrigins(Arrays.asList(frontendUrl));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 허용된 HTTP 메서드 설정
+        configuration.setAllowedHeaders(List.of("*")); // 허용된 헤더 설정
+        configuration.setAllowCredentials(true); // 자격 증명 허용
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // 모든 경로에 CORS 설정 적용
         return source;
     }
 }
